# teleddns-server

./: .gitignore  API_DOCUMENTATION.md  DATAMODEL.md  Dockerfile  README.md  SPECS.md  alembic.ini  manage.py  pyproject.toml  pytest.ini  start-teleddns.sh
alembic/: env.py
alembic/versions/: 090af2e73908_v02_branch_initial_migration.py
ddns/: __init__.py  apps.py  services.py  urls.py  utils.py  views.py
dns_manager/: admin.py  apps.py  backend.py  models.py  sync.py  urls.py  views.py
dns_manager/management/commands/: create_test_data.py
dns_manager/migrations/: 0001_initial.py
docs/: API_DOCUMENTATION.md  PRODUCTION_DEPLOYMENT.md  SYNC_THREAD_BACKOFF.md  SYNC_THREAD_INITIALIZATION.md  per-server-status-tracking.md  zone-status-tracking-refactoring.md
manager/: __init__.py  admin.py  api_docs.py  apps.py  backend_api.py  backend_worker.py  models.py  permissions.py  serializers.py  services.py  signals.py  sync_thread.py  urls.py  views.py
manager/management/commands/: __init__.py  set_admin_password.py  sync.py  sync_dirty.py  sync_thread_control.py  sync_zones.py
manager/migrations/: 0001_initial.py  0002_add_soa_and_slave_only_zone.py  0002_add_zoneserver.py  0002_reorganize_zone_servers.py  0002_reorganize_zone_servers.py.broken  0003_migrate_soa_data.py  0003_remove_old_zone_fields.py  0004_remove_zone_soa_fields.py  0004_remove_zoneserver_content_dirty.py
src/teleddns_server/: __init__.py  admin.py  api.py  audit.py  auth.py  backend.py  fastapi_users_auth.py  main.py  metrics.py  model.py  settings.py  sync.py  view.py  web.py
src/teleddns_server/templates/: 2fa_setup.html  2fa_verify.html  base.html  dashboard.html  login.html  record_create.html  record_edit.html  security.html  tokens.html  zone_create.html  zone_detail.html  zone_edit.html  zones.html
teleddns_server/: __init__.py  admin.py  asgi.py  auth.py  backend.py  main.py  model.py  settings.py  urls.py  view.py  views.py  wsgi.py
teleddns_server/settings/: __init__.py  base.py  development.py  production.py
tests/: __init__.py  conftest.py  test_backend_integration.py  test_ddns_auth.py  test_ddns_http_integration.py  test_event_sync.py  test_settings.py  test_simple_auth.py
tests/dns_manager/: __init__.py  test_backend_sync.py  test_models.py
