[tool.poetry]
name = "teleddns-server"
version = "0.1.0"
description = "DDNS API server"
authors = ["Tomas Hlavacek <tmshlvck@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "teleddns_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
starlette-admin = "^0.14.0"
sqlmodel = "^0.0.19"
itsdangerous = "^2.2.0"
passlib = "^1.7.4"
pydantic-settings = "^2.3.3"
aiohttp = "^3.9.5"
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^6.0.0"
python-multipart = "^0.0.9"
jinja2 = "^3.1.4"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
fido2 = "^1.1.3"
prometheus-client = "^0.21.0"
bcrypt = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
teleddns_server = "teleddns_server:main"
